syntax = "proto3";

package chef.automate.domain.infra_proxy.response;
option go_package = "github.com/chef/automate/api/interservice/infra_proxy/response";

message Clients {
	// Client list.
    repeated ClientListItem clients = 1;
}

message ClientListItem {
	// Client name.
    string name = 1;
}

message Client {
	// Client name.
	string name = 1;
	// Client name return by Chef Infra Server API.
	string client_name = 2;
	// Chef organization name.
	string org_name = 3;
	// Boolean indicates client type is validator or not.
	bool validator = 4;
	// Client JSON class.
	string json_class = 5;
	// Chef object type.
	string chef_type = 6;
}
